# ts/api/v1/user_manager_service.pb.ts
@@ -104,7 +104,7 @@ export type CreateOrganizationRequest = {
 }
 
 export type ListOrganizationsRequest = {
-  includeSummaries?: boolean
+  includeSummary?: boolean
 }
 
 export type ListOrganizationsResponse = {
